--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "marked": "^0.3.9",
     "mockjs": "^1.0.1-beta3",
     "papaparse": "^4.3.6",
+    "quill": "^1.3.4",
     "simplemde": "^1.11.2",
     "vue": "^2.5.2",
     "vue-grid-layout": "^2.1.11",
