--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iview-dashboard",
+  "name": "d2admin-vue-element",
   "version": "1.0.0",
   "description": "A management system framework based on iview",
   "author": "李杨 <1711467488@qq.com>",
