--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "d2admin-vue-element",
   "version": "1.0.0",
-  "description": "A management system framework based on iview",
+  "description": "A management system framework based on element",
   "author": "李杨 <1711467488@qq.com>",
   "private": true,
   "scripts": {
