--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "marked": "^0.3.9",
     "mockjs": "^1.0.1-beta3",
     "papaparse": "^4.3.6",
+    "particles.js": "^2.0.0",
     "quill": "^1.3.4",
     "simplemde": "^1.11.2",
     "timeago.js": "^3.0.2",
