--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@antv/g2": "^3.0.4",
     "axios": "^0.17.1",
     "clipboard-polyfill": "^2.4.1",
     "countup.js": "^1.9.3",
