--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clipboard-polyfill": "^2.4.1",
     "countup.js": "^1.9.3",
     "element-ui": "^2.0.11",
+    "file-saver": "^1.3.3",
     "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
@@ -31,7 +32,8 @@
     "vue-grid-layout": "^2.1.11",
     "vue-router": "^3.0.1",
     "vue-splitpane": "^1.0.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "xlsx": "^0.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
