--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "timeago.js": "^3.0.2",
     "vue": "^2.5.2",
     "vue-grid-layout": "^2.1.11",
+    "vue-i18n": "^7.4.2",
     "vue-router": "^3.0.1",
     "vue-splitpane": "^1.0.2",
     "vuex": "^3.0.1",
