--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "particles.js": "^2.0.0",
     "quill": "^1.3.4",
     "simplemde": "^1.11.2",
+    "svg-sprite-loader": "^3.6.2",
     "timeago.js": "^3.0.2",
     "vue": "^2.5.2",
     "vue-grid-layout": "^2.1.11",
