--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
+    "lodash.get": "^4.4.2",
     "marked": "^0.3.9",
     "mockjs": "^1.0.1-beta3",
     "papaparse": "^4.3.6",
