--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "svg-sprite-loader": "^3.6.2",
+    "text-loader": "0.0.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
