--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.17.1",
     "clipboard-polyfill": "^2.4.1",
     "countup.js": "^1.9.3",
+    "dayjs": "^1.6.7",
     "element-ui": "^2.0.11",
     "file-saver": "^1.3.3",
     "github-markdown-css": "^2.10.0",
