--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@antv/data-set": "^0.8.5",
     "@antv/g2": "^3.0.4",
     "axios": "^0.17.1",
+    "better-scroll": "^1.12.1",
     "clipboard-polyfill": "^2.4.1",
     "countup.js": "^1.9.3",
     "dayjs": "^1.6.7",
