--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "path-posix": "^1.0.0",
     "quill": "^1.3.4",
     "simplemde": "^1.11.2",
+    "v-contextmenu": "^2.7.0",
     "vue": "^2.5.2",
     "vue-grid-layout": "^2.1.11",
     "vue-i18n": "^7.4.2",
