--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
     "lodash.get": "^4.4.2",
+    "lodash.uniqueid": "^4.0.1",
     "marked": "^0.3.9",
     "mockjs": "^1.0.1-beta3",
     "papaparse": "^4.3.6",
