--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
+    "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.uniqueid": "^4.0.1",
     "marked": "^0.3.9",
