--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clipboard-polyfill": "^2.4.1",
     "countup.js": "^1.9.3",
     "dayjs": "^1.6.7",
+    "echarts": "^4.1.0",
     "element-ui": "^2.0.11",
     "file-saver": "^1.3.3",
     "github-markdown-css": "^2.10.0",
@@ -34,6 +35,7 @@
     "path-posix": "^1.0.0",
     "quill": "^1.3.4",
     "simplemde": "^1.11.2",
+    "v-charts": "^1.17.6",
     "v-contextmenu": "^2.7.0",
     "vue": "^2.5.2",
     "vue-grid-layout": "^2.1.11",
