--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue": "^2.5.2",
     "vue-grid-layout": "^2.1.11",
     "vue-i18n": "^7.4.2",
+    "vue-json-tree-view": "^2.1.4",
     "vue-router": "^3.0.1",
     "vue-splitpane": "^1.0.2",
     "vuex": "^3.0.1",
