--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "quill": "^1.3.4",
     "screenfull": "^3.3.2",
     "simplemde": "^1.11.2",
+    "ua-parser-js": "^0.7.18",
     "v-charts": "^1.17.6",
     "v-contextmenu": "^2.7.0",
     "vue": "^2.5.16",
