--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.sortby": "^4.7.0",
     "lodash.uniqueid": "^4.0.1",
     "lowdb": "^1.0.0",
     "marked": "^0.3.9",
