昨天衍生出来的bug：flex下的margin-right导致的。 在昨天的基础上： 1. 引入了flex.css，这个工具可以在实际开发中继续方便快速构建业务页面 —— 可以加一个页面说明 2. 将布局的部分从样式中脱离出来，在html里一目了然。 3. 测试情况： 测试环境：Chrome，IE11，Edge —— 显示正常 —— 边框没有1px的问题 —— 标签过多显示正常

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "vue-router": "^3.0.1",
     "vue-splitpane": "^1.0.2",
     "vuex": "^3.0.1",
-    "xlsx": "^0.12.0"
+    "xlsx": "^0.12.0",
+    "flex.css": "^1.1.7"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
