--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^2.2.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
+    "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
     "lodash.uniqueid": "^4.0.1",
     "lowdb": "^1.0.0",
