--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.get": "^4.4.2",
     "lodash.set": "^4.3.2",
     "lodash.sortby": "^4.7.0",
+    "lodash.tostring": "^4.1.4",
     "lodash.uniqueid": "^4.0.1",
     "lowdb": "^1.0.0",
     "marked": "^0.3.9",
