--- a/package.json
+++ b/package.json
@@ -26,12 +26,7 @@
     "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "js-cookie": "^2.2.0",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.get": "^4.4.2",
-    "lodash.set": "^4.3.2",
-    "lodash.sortby": "^4.7.0",
-    "lodash.tostring": "^4.1.4",
-    "lodash.uniqueid": "^4.0.1",
+    "lodash": "^4.17.10",
     "lowdb": "^1.0.0",
     "marked": "^0.3.9",
     "mockjs": "^1.0.1-beta3",
