--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "doc:build": "vuepress build docs"
   },
   "dependencies": {
+    "@d2-projects/d2-crud": "^0.0.2",
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "better-scroll": "^1.12.1",
