--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "element-ui": "^2.4.4",
     "file-saver": "^1.3.3",
     "flex.css": "^1.1.7",
+    "fuse.js": "^3.2.1",
     "github-markdown-css": "^2.10.0",
     "highlight.js": "^9.12.0",
     "hotkeys-js": "^3.3.6",
