--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-scroll": "^1.12.1",
     "clipboard-polyfill": "^2.4.1",
     "countup.js": "^1.9.3",
+    "crypto-js": "^3.1.9-1",
     "dayjs": "^1.6.7",
     "echarts": "^4.1.0",
     "element-ui": "^2.4.4",
