--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "v-charts": "^1.17.6",
     "v-contextmenu": "^2.7.0",
     "vue": "^2.5.17",
+    "vue-cropper": "^0.4.4",
     "vue-grid-layout": "^2.1.11",
     "vue-i18n": "^7.4.2",
     "vue-json-tree-view": "^2.1.4",
