getFile is can do,but need better

--- a/.env
+++ b/.env
@@ -4,4 +4,8 @@
 VUE_APP_TITLE=医疗人员及技术管理系统
 
 # 网络请求公用地址
-VUE_APP_API=/api/
+#VUE_APP_API=/api/
+
+#SPAServer='http://172.16.128.43'
+
+#APIServer='http://172.16.128.43:5002'
