--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ VUE_APP_TITLE=医疗人员及技术管理系统
 #SPAServer='http://172.16.128.43'
 
 #APIServer='http://172.16.128.43:5002'
+
+# t is true,f is false
+#VUE_APP_DEBUG=t
