改版后第一个能用的版本

--- a/.env
+++ b/.env
@@ -6,9 +6,8 @@ VUE_APP_TITLE=医疗人员及技术管理系统
 # 网络请求公用地址
 #VUE_APP_API=/api/
 
-#SPAServer='http://172.16.128.43'
+# SSOURL=http://172.16.128.43:5000
 
-#APIServer='http://172.16.128.43:5002'
+# SPAURL=http://172.16.128.43
 
-# t is true,f is false
-#VUE_APP_DEBUG=t
+# YLJSURL=http://172.16.128.43:5002
