--- a/.env.development
+++ b/.env.development
@@ -3,8 +3,12 @@
 # 页面 title 前缀
 VUE_APP_TITLE=医疗人员及技术管理系统 Dev
 
-#SPAServer='http://localhost:5005'
+# SSOURL='http://localhost:5000'
 
-#APIServer='http://localhost:5002'
+# SPAURL='http://localhost:8080'
 
-#VUE_APP_PC=JJPC
+# YLJSURL='http://localhost:5002'
+
+# t is true,f is false
+# build with devlopment will t
+VUE_APP_DEBUG=t
