--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "lowdb": "^1.0.0",
     "marked": "^0.3.9",
     "mockjs": "^1.0.1-beta3",
-    "oidc-client-axios": "^1.5.38",
+    "oidc-client": "^1.7.1",
     "papaparse": "^4.3.6",
     "particles.js": "^2.0.0",
     "quill": "^1.3.4",
@@ -60,7 +60,7 @@
     "@vue/cli-service": "^3.0.0",
     "@vue/eslint-config-standard": "^3.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
-    "babel-core": "7.0.0-bridge.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "lint-staged": "^7.2.0",
     "node-sass": "^4.9.0",
